# internal/model/bar.go
@@ -12,11 +12,11 @@ const TableNameBar = "bar"
 
 // Bar bar信息
 type Bar struct {
-	ID         int64     `gorm:"column:id;primaryKey;autoIncrement:true;comment:主键ID" json:"id"`                        // 主键ID
-	Value      string    `gorm:"column:value;not null;comment:bar value" json:"value"`                                  // bar value
-	CreateTime time.Time `gorm:"column:create_time;not null;default:CURRENT_TIMESTAMP;comment:创建时间" json:"create_time"` // 创建时间
-	UpdateTime time.Time `gorm:"column:update_time;not null;default:CURRENT_TIMESTAMP;comment:更新时间" json:"update_time"` // 更新时间
-	Deleted    bool      `gorm:"column:deleted;not null;comment:是否删除" json:"deleted"`                                   // 是否删除
+	ID         int64     `gorm:"column:id;primaryKey;autoIncrement:true;comment:主键ID" json:"id"`                       // 主键ID
+	Value      string    `gorm:"column:value;not null;comment:bar value" json:"value"`                                 // bar value
+	CreateTime time.Time `gorm:"column:create_time;not null;default:CURRENT_TIMESTAMP;comment:创建时间" json:"createTime"` // 创建时间
+	UpdateTime time.Time `gorm:"column:update_time;not null;default:CURRENT_TIMESTAMP;comment:更新时间" json:"updateTime"` // 更新时间
+	Deleted    bool      `gorm:"column:deleted;not null;comment:是否删除" json:"deleted"`                                  // 是否删除
 }
 
 // TableName Bar's table name
