# internal/model/strategy_index.go
@@ -12,16 +12,16 @@ const TableNameStrategyIndex = "strategy_index"
 
 // StrategyIndex 指标信息
 type StrategyIndex struct {
-	ID           int64     `gorm:"column:id;primaryKey;autoIncrement:true;comment:主键ID" json:"id"`                        // 主键ID
-	UserID       int64     `gorm:"column:user_id;not null;comment:用户ID" json:"user_id"`                                   // 用户ID
-	StrategyID   int64     `gorm:"column:strategy_id;not null;comment:策略ID" json:"strategy_id"`                           // 策略ID
-	IndexID      int64     `gorm:"column:index_id;not null;comment:指标ID" json:"index_id"`                                 // 指标ID
-	Bar          string    `gorm:"column:bar;not null;comment:时间线" json:"bar"`                                            // 时间线
-	IndexConfig  string    `gorm:"column:index_config;not null;comment:指标配置" json:"index_config"`                         // 指标配置
-	WarningIndex int32     `gorm:"column:warning_index;not null;comment:预警指标" json:"warning_index"`                       // 预警指标
-	CreateTime   time.Time `gorm:"column:create_time;not null;default:CURRENT_TIMESTAMP;comment:创建时间" json:"create_time"` // 创建时间
-	UpdateTime   time.Time `gorm:"column:update_time;not null;default:CURRENT_TIMESTAMP;comment:更新时间" json:"update_time"` // 更新时间
-	Deleted      bool      `gorm:"column:deleted;not null;comment:是否删除" json:"deleted"`                                   // 是否删除
+	ID           int64     `gorm:"column:id;primaryKey;autoIncrement:true;comment:主键ID" json:"id"`                       // 主键ID
+	UserID       int64     `gorm:"column:user_id;not null;comment:用户ID" json:"userId"`                                   // 用户ID
+	StrategyID   int64     `gorm:"column:strategy_id;not null;comment:策略ID" json:"strategyId"`                           // 策略ID
+	IndexID      int64     `gorm:"column:index_id;not null;comment:指标ID" json:"indexId"`                                 // 指标ID
+	Bar          string    `gorm:"column:bar;not null;comment:时间线" json:"bar"`                                           // 时间线
+	IndexConfig  string    `gorm:"column:index_config;not null;comment:指标配置" json:"indexConfig"`                         // 指标配置
+	WarningIndex int32     `gorm:"column:warning_index;not null;comment:预警指标" json:"warning_index"`                      // 预警指标
+	CreateTime   time.Time `gorm:"column:create_time;not null;default:CURRENT_TIMESTAMP;comment:创建时间" json:"createTime"` // 创建时间
+	UpdateTime   time.Time `gorm:"column:update_time;not null;default:CURRENT_TIMESTAMP;comment:更新时间" json:"updateTime"` // 更新时间
+	Deleted      bool      `gorm:"column:deleted;not null;comment:是否删除" json:"deleted"`                                  // 是否删除
 }
 
 // TableName StrategyIndex's table name
